--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hello world
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>codeMghrib</title>
+  </head>
+  <body>
+    <p>finally live!!!!!!!</p>
+  </body>
+</html>
